clean-up: - remove ViolationCounterCheck - remove static code analysis checks - fix equals - convert to 'var'